# ideavault

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RUST_TOOLCHAIN.md  cliff.toml  install.sh  uninstall.sh
.github/workflows/: ci.yml  docs.yml  release.yml  rust.yml
.opencode/skills/ideavault/: SKILL.md
.opencode/skills/ideavault-release/: SKILL.md
docs/: CommandLineHelp.md  USAGE.md
src/: cli.rs  idea.rs  lib.rs  main.rs  storage.rs
src/commands/: idea.rs  mod.rs  project.rs  search.rs  task.rs  version.rs
src/models/: config.rs  idea.rs  mod.rs  project.rs  tag.rs  task.rs
tasks/: todo.md
tests/: idea_tests.rs  project_tests.rs  storage_test.rs  task_tests.rs
