[package]
name = "ideavault"
version = "0.2.6"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap-markdown = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
anyhow = "1.0"
thiserror = "1.0"
ureq = { version = "2.9", features = ["json"] }

[dev-dependencies]
tempfile = "3.8"